--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
 body {
-    margin: 0; /*all 4 sides margins are going to be set to 0px*/
+    margin: 0; 
+    text-align: center;
 }
 
 h1 {
-    margin-top: 0; /*the h1 is going to touch the browse bar*/
+    margin-top: 0;
 }
 
 .top-container {
     background-color: #cefff1;
+    position: relative;
+    padding-top: 100px;
 }
 
 .middle-container {
@@ -20,4 +23,16 @@ h1 {
     background-color: blue;
     height: 200px;
     width: 200px;
+}
+
+.bottom-cloud {
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
+}
+
+.top-cloud {
+    position: absolute;
+    right: 300px;
+    top: 50px;
 }
