--- a/css/styles.css
+++ b/css/styles.css
@@ -1,38 +1,161 @@
 body {
     margin: 0; 
     text-align: center;
+    font-family: 'Karma', serif;
+    background-color: #F9F7F7;
+    color: #40514E;
+}
+h1 {
+    margin: 50px auto 0 auto;
+    font-family: 'Sacramento', cursive;
+    font-size: 5.625rem;
+    color: #66BFBF;
+    
 }
 
-h1 {
-    margin-top: 0;
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    color: #66BFBF;
+    padding-bottom: 10px;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
+    color: #11999E;
 }
 
 .top-container {
-    background-color: #cefff1;
-    position: relative;
+    background-color: #cefff1;    
     padding-top: 100px;
 }
 
 .middle-container {
-    background-color: red;
-    height: 200px;
-    width: 200px;
+    margin: 100px 0;
 }
 
-.bottom-container {
-    background-color: blue;
-    height: 200px;
-    width: 200px;
+.bottom-container {    
+    background-color: #66BFBF;    
+    padding-bottom: 20px;
+    padding-top: 50px;
 }
 
 .bottom-cloud {
     position: absolute;
-    left: 300px;
+    left: 250px;
     bottom: 300px;
 }
 
 .top-cloud {
     position: absolute;
     right: 300px;
-    top: 50px;
+    top: 40px;
+}
+
+a {
+    color: #11999E;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    margin: 10px 20px;
+}
+
+a:hover {
+    color: #eaf6f6;
+}
+
+.programmer {
+    font-weight: normal;
+    font-size: 1.25rem;    
+}
+
+.skill-row {
+    display: inline-block;
+    width: 50%;
+    margin: 50px auto;
+    text-align: justify;
+}
+
+p {
+    line-height: 2;    
+}
+
+.computer-img {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+.testing-img {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+
+.profile {
+    width: 40%;
+    margin: auto;   
+}
+
+hr {
+    border-width: 5px 0 0;
+    width: 5%;
+    border-style: dotted;
+    color: #a6e3e9;
+    margin: 100px auto;
+}
+
+
+.contact-me {
+    width: 50%;
+    margin: auto auto 100px auto;
+}
+
+.contact-message {
+    margin: 40px auto 60px;
+}
+
+.copyright {
+    color: #EAF6F6;
+    font-size: 0.75rem;
+    padding: 20px 0;
+}
+.skills {
+    margin: 50px auto;
+
+}
+
+.btn {
+    background: #11CDD4;
+    background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+    background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 13px;
+    font-weight: 100;
+    padding: 8px;
+    border: solid #11999E 1px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+}
+
+.btn:hover {
+    border: solid #2BC4AD 1px;
+    background: #30E3CB;
+    background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
+    background-image: linear-gradient(to bottom, #30E3CB, #2BC4AD);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    text-decoration: none;
 }
